--- a/index.html
+++ b/index.html
@@ -41,8 +41,10 @@
 
       <div id="feedback" class="feedback hide"></div>
     </div>
+    <iframe src="highscores.html" style="display: none"></iframe>
 
     <script src="./assets/js/questions.js"></script>
     <script src="./assets/js/logic.js"></script>
+    <script src="./assets/js/scores.js"></script>
   </body>
 </html>
